--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.1-security",
     "jsoneditor": "^5.5.11",
     "vue": "^2.2.2",
+    "vue-drag-and-drop": "^2.2.0",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
   },
