--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.4.11",
     "fs": "0.0.1-security",
     "jsoneditor": "^5.5.11",
